# Clike_Compiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ircode  ircode.txt
src/: CodeGen.cpp  SymbolTable.cpp  ast.cpp  astprinter.cpp  main.cpp  parser.cpp  parser.hpp  parser.y  tokenize.cpp  tokenize.l
src/include/: CodeGen.h  CodeGen.hpp  LLVMlibs.h  LLVMlibs.hpp  SymbolTable.h  SymbolTable.hpp  ast.h  ast.hpp  astprinter.h  astprinter.hpp
test/: tempCodeRunnerFile.cpp  test  test.c  test.cpp
test/GrammerTest/: a  a.c  tempCodeRunnerFile.c
test/LexTest/: test  test.c  test.l  test.sh  testlex.cpp
